[package]
name = "smoltunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.7"
futures = "0.3"
poise = "0.6"
poise_error = { git = "https://github.com/MCOfficer/poise-error", branch = "alternative-error-fmt" }
rand = "0.9"
retainer = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "serenity", "rustls"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
version = "0.14"
default-features = false
features = ["songbird", "serenity", "hyper-rustls", "tungstenite-rustls-webpki-roots", "macros"]
