[package]
name = "smoltunes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decancer = { version = "3.3", features = ["leetspeak"], default-features = false }
derive-new = "0.7"
futures = "0.3"
gstring = "0.12"
icu_properties = "2.0"
itertools = "0.14"
poise = "0.6"
poise_error = { git = "https://github.com/MCOfficer/poise-error", branch = "alternative-error-fmt" }
rand = "0.9"
retainer = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tuples = "1.17"
unicase = "2.8"
unicode-matching = "0.6"
unicode-segmentation = "1.12"

[dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "serenity", "rustls"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
version = "0.14"
default-features = false
features = ["songbird", "serenity", "hyper-rustls", "tungstenite-rustls-webpki-roots", "macros"]

[dev-dependencies]
csv = "1.3"
comfy-table = "7.2"
csv2html = "3.1"