[package]
name = "smoltunes"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["std"], default-features = false }
decancer = { version = "3.3", features = ["leetspeak"], default-features = false }
derive-new = "0.7"
futures = "0.3"
gstring = "0.13"
icu_properties = "2.1"
itertools = "0.14"
parking_lot = "0.12"
poise = "0.6"
poise_error = { git = "https://github.com/MCOfficer/poise-error", branch = "alternative-error-fmt" }
rand = { version = "0.9", features = ["thread_rng"], default-features = false }
retainer = "0.4"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tuples = "1.17"
unicase = "2.8"
unicode-matching = "0.6"
unicode-segmentation = "1.12"

[dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "rustls", "serenity"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.lavalink-rs]
version = "0.14"
default-features = false
features = ["macros", "serenity", "songbird", "tungstenite-rustls-webpki-roots"]

[dev-dependencies]
csv = "1.4"
comfy-table = "7.2"
csv2html = "3.1"